# atslens

./: .gitignore  DISCLAIMER.md  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/01-greenhouse-style-export/: SCENARIO.md  vendora_export.json
demos/02-bad-data-triage/: SCENARIO.md  dirty_records.json
demos/03-vendor-to-vendor-migration/: SCENARIO.md  source_vendora.json
demos/04-custom-spreadsheet-profile/: SCENARIO.md  legacy_spreadsheet.json
demos/05-normalize-messy-intake/: SCENARIO.md  messy_intake.json
demos/06-migration-verification-diff/: SCENARIO.md  after_vendorb.json  before_canonical.json
demos/07-csv-for-analytics/: SCENARIO.md  pipeline_snapshot.json
demos/08-eu-international-records/: SCENARIO.md  eu_candidates.json
examples/: custom_profile.json  help.txt  records.json  version.txt
src/atslens/: __init__.py  cli.py  diff.py  exporter.py  layouts.py  mapper.py  normalize.py  schema.py
tests/: test_atslens.py
